adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,7 @@
   <h1>Bem-vindo(a)!</h1>
   <hr>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta tempora nobis ullam quibusdam, deserunt mollitia sapiente voluptatum officiis, omnis amet iusto quos aliquam veniam impedit id, enim culpa ducimus. Fuga?</p>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus sint quos amet nesciunt tenetur eaque asperiores voluptas distinctio! Deserunt vitae officia perferendis, sed inventore soluta placeat expedita vero totam velit.</p>
 </body>
 </html>
 
